Upgraded to JDK 15 & OpenJFX